<resources>
    <string name="app_name">TeddyApplication</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">If you are not registered yet, REGISTER NOW</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Error in authentication</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="group_section">Groups Section</string>
    <string name="personal_section">Personal Section</string>
    <string name="expenses_section">Expenses</string>
    <string name="summary_section">Summary</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_name">Type your name</string>
    <string name="prompt_surname">Type your surname</string>
    <string name="prompt_username">Type your username</string>
    <string name="title_activity_new_group">New Group</string>
    <string name="title_expense_creation">New Expense</string>
    <string name="Name">Name</string>
    <string name="Description">Description</string>
    <string name="Import">Import</string>
    <string name="Author">Author</string>
    <string name="create_group">Create Group</string>
<<<<<<< HEAD
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_choice_group_members">Add members</string>
    <string name="invite_user">Invite</string>
    <string name="search">Search</string>


    <!-- ??????????
    <string name="invitation_title">Send TeddyApp Invite</string>
=======
    <string name="title_activity_choice_group_members">ChoiceGroupMembersActivity</string>
    <string name="invite_user">Invite</string>
    <string name="search">Search</string>

    <!--<string name="invitation_title">Send TeddyApp Invite</string>
>>>>>>> origin/master
    <string name="invitation_message">This app is terrific, download it!</string>
    <string name="invitation_deep_link">http://example.com/TeddyApplication/Download</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>-->
</resources>
