<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="it.polito.teddyapplication.ChoiceGroupMembersActivity"
    tools:showIn="@layout/activity_choice_group_members">

    <!--<ListView
        android:id="@+id/lv_groups_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>-->

    <ScrollView
        android:id="@+id/choice_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText android:id="@+id/search_contact"
                android:hint="@string/search"
                android:inputType="text"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp">
            </EditText>

            <TextView
                android:id="@+id/invite_sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/search_contact"
                android:textColor="@color/lightgrey"
                />

            <TextView
                android:id="@+id/invite_sent_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/search_contact"
                android:layout_toRightOf="@+id/invite_sent"
                android:gravity="end"
                android:textColor="@color/red"
                />

            <EditText android:id="@+id/email_invitation"
                android:hint="@string/prompt_email"
                android:inputType="text"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/invite_sent">
            </EditText>

            <Button
                android:id="@+id/invite_button"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="wrap_content"
                android:text="@string/invite_user"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:clickable="true"
                android:onClick="onClick"
                android:layout_below="@+id/email_invitation"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"/>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
